# OpenGLStudies

./: .gitmodules  CMakeLists.txt
include/camera/: camera.hpp
include/dt/: dt.hpp
include/glad/: glad.h
include/models/: models.hpp
include/models/blueprint/: models_blueprint.hpp
include/renderer/: renderer.hpp
include/shader/: shader.hpp
include/texture/: texture.hpp
include/user_input/: user_input.hpp
include/window_config/: window_config.hpp
src/: .main.cpp.swp  glad.c  main.cpp
src/camera/: camera.cpp
src/dt/: dt.cpp
src/models/: models.cpp
src/models/blueprint/: models_blueprint.cpp
src/renderer/: renderer.cpp
src/shader/: shader.cpp
src/texture/: texture.cpp
src/user_input/: user_input.cpp
src/window_config/: window_config.cpp
